Added button link to deals

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h1>City Music Fest</h1>
             <p>Join us for 3 days for the best music around the world</p>
             <p>October 29,30,31</p>
-            <button>Buy Tickets</button>
+            <button><a href="#deals_container">Buy Tickets</a></button>
         </div>
     </main>
 
@@ -60,7 +60,7 @@
                     The Radiations Primal -
                     The Outsider Absentee
                 </p>
-                <button>Buy Tickets</button>
+                <button><a href="#deals_container">Buy Tickets</a></button>
                 <h1>SAT</h1>
                 <p>The Looseleaf Tinge -
                     Audition Charge -
@@ -77,7 +77,7 @@
                     The Radiations Primal -
                     The Outsider Absentee
                 </p>
-                <button>Buy Tickets</button>
+                <button><a href="#deals_container">Buy Tickets</a></button>
                 <h1>SUN</h1>
                 <p>The Looseleaf Tinge -
                     Audition Charge -
@@ -94,7 +94,7 @@
                     The Radiations Primal -
                     The Outsider Absentee
                 </p>
-                <button>Buy Tickets</button>
+                <button><a href="#deals_container">Buy Tickets</a></button>
             </div>
         </div>
 
