--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Music Lineup</a></li>
+                <li><a href="#schedule_container">Music Lineup</a></li>
                 <li><a href="#">Tickets</a></li>
                 <li><a href="#">Plan your trip</a></li>
                 <li><a href="#">Shop</a></li>
