Contact page added, issues with UI fixed
Some issues with the UI/UX design has been resolved

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Project-G05</title>
     <link rel="stylesheet" href="./css/index.css">
     <script type="text/javascript" src="./js/index.js" defer></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
@@ -14,17 +14,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Concert+One&family=Open+Sans:wght@300&family=Orbitron:wght@700&display=swap" rel="stylesheet">
+<link rel="icon" href="./assets/icon.png">
 </head>
 <body>
     <header>
         <nav>
             <ul>
                 <li><a href="#schedule_container">Music Lineup</a></li>
-                <li><a href="#">Tickets</a></li>
+                <li><a href="#deals_container">Tickets</a></li>
                 <li><a href="#">Plan your trip</a></li>
                 <li><a href="#">Shop</a></li>
                 <li><a href="#">Faq</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -45,62 +46,22 @@
 
             <div id="schedule_container">
                 <h1>FRI</h1>
-                <p>The Looseleaf Tinge -
-                    Audition Charge -
-                    The Little Dell -
-                    The Blunt Dovetail -
-                    The Laughingstock Peripherals -
-                    The Nor Binocular -
-                    Terrestrial Cliff -
-                    The Leather Hummingbird -
-                    Contracting Brief -
-                    Louse LooseleafProspectus -
-                    Snout Slayers -
-                    Fanatic Mould -
-                    The Radiations Primal -
-                    The Outsider Absentee
+                <p>Electronica 2022 - Best Tracks of Tomorrowland - Tomorrowland Soundtrack - EDM 2022 Hits - Tomorrowland Winter - Tomorrowland Brasil - EDM Playlist - Musica Electronica 🎪
                 </p>
                 <button><a href="#deals_container">Buy Tickets</a></button>
                 <h1>SAT</h1>
-                <p>The Looseleaf Tinge -
-                    Audition Charge -
-                    The Little Dell -
-                    The Blunt Dovetail -
-                    The Laughingstock Peripherals -
-                    The Nor Binocular -
-                    Terrestrial Cliff -
-                    The Leather Hummingbird -
-                    Contracting Brief -
-                    Louse LooseleafProspectus -
-                    Snout Slayers -
-                    Fanatic Mould -
-                    The Radiations Primal -
-                    The Outsider Absentee
+                <p>EDM) encompasses styles ranging from beatless ambient music to 200-beats-per-minute hardcore, with house music, techno, drum and bass, dubstep, and trance among the most-notable examples.
                 </p>
                 <button><a href="#deals_container">Buy Tickets</a></button>
                 <h1>SUN</h1>
-                <p>The Looseleaf Tinge -
-                    Audition Charge -
-                    The Little Dell -
-                    The Blunt Dovetail -
-                    The Laughingstock Peripherals -
-                    The Nor Binocular -
-                    Terrestrial Cliff -
-                    The Leather Hummingbird -
-                    Contracting Brief -
-                    Louse LooseleafProspectus -
-                    Snout Slayers -
-                    Fanatic Mould -
-                    The Radiations Primal -
-                    The Outsider Absentee
+                <p>Above & Beyond are an electronic music group consisting of English DJs Jono Grant, Tony McGuinness and Finnish DJ Paavo Siljamäki. Formed in 2000, they are the owners of London-based electronic dance music labels Anjunabeats and Anjunadeep, and also host a weekly radio show titled Group Therapy Radio.
                 </p>
                 <button><a href="#deals_container">Buy Tickets</a></button>
             </div>
         </div>
 
         <div id="spotify_container">
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0iAeUtwINlqfjwAyQ4ykur?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
-            </iframe>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3VXReCeetN58c1clj9u8ZK?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
 
         <div id="sales_container">
@@ -130,11 +91,11 @@
     </section>
 
     <footer>
-        <h1>&copy;City Music Festival</h1>
+        <h1>&copy; City Music Festival</h1>
         <div id="socials_container">
-            <i class="bi bi-facebook"></i>
-            <i class="bi bi-twitter"></i>
-            <i class="bi bi-instagram"></i>
+            <a href="https://facebook.com" target="_blank"><i class="bi bi-facebook"></i></a>
+            <a href="https://twitter.com" target="_blank"><i class="bi bi-twitter"></i></a>
+            <a href="https://instagram.com" target="_blank"><i class="bi bi-instagram"></i></a>
         </div>
     </footer>
 </body>
