--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Project-G05 Mahmoud Mraisi - 101432902  & Jacob Belizario 101411589 -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,16 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project-G05</title>
-    <link rel="stylesheet" href="./css/index.css">
     <script type="text/javascript" src="./js/index.js" defer></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dangrek&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Concert+One&family=Open+Sans:wght@300&family=Orbitron:wght@700&display=swap" rel="stylesheet">
-<link rel="icon" href="./assets/icon.png">
+    <link href="https://fonts.googleapis.com/css2?family=Concert+One&family=Open+Sans:wght@300&family=Orbitron:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="icon" href="./assets/icon.png">
 </head>
 <body>
     <header>
